# web-automation

./: .gitignore  README.md  pyproject.toml
web_automation/: __init__.py
web_automation/cli/: main.py
web_automation/core/: runner.py
web_automation/core/discovery/: __init__.py  merger.py  models.py  scheduler.py
web_automation/core/storage/: __init__.py
web_automation/core/validators/: __init__.py
