[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-automation"
version = "0.1.0"
description = "Generic web automation framework for discovery, validation, and monitoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.52.0",
    "playwright>=1.40.0",
    "cryptography>=41.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
faucet = [
    "web3>=6.0.0",
    "eth-account>=0.9.0",
]
jobs = [
    "python-linkedin>=2.0.0",
]
ecommerce = [
    "amazon-paapi5>=1.0.0",
]

[project.scripts]
web-auto = "web_automation.cli.main:main"
web-auto-tui = "web_automation.tui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_automation*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true